--- a/drivematch/src/index.css
+++ b/drivematch/src/index.css
@@ -7,7 +7,7 @@
    THEME VARIABLES
 ---------------------------------------- */
 :root {
-  --color-bg: #d0e0e1;
+  --color-bg: #E3F2FD;
   --color-text: #39345b;
 }
 
